--- a/Source/templates/define_complex_net.html
+++ b/Source/templates/define_complex_net.html
@@ -1,364 +1,22 @@
-{% extends "metadata_layout.html" %}
+{% extends "metadata_layout.html" %} {% block main_form_css %}
+<link rel="stylesheet" href="../static/css/define_complex_net.css"> {% endblock %} {% block main_form %}
 
-{% block main_form_css %}
-<link rel="stylesheet" href="../static/css/define_complex_net.css">
-{% endblock %}
-
-{% block main_form %}
-
- <div class="row external_simulators_div">
-    <div class="col-4">
-        <div class="card">
-            <div id = "HeaderLink" class="card-header">
-                Link
-            </div>
-            <div class="card-body">
-                <div class="form-inline">
-                    <label for="" class="">System:</label>
-                    <select name="" id="Link_System" class="form-control">
-                        <option value="">sys1</option>
-                        <option value="">sys2</option>
-                        <option value="">sys3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">Ext. simulation:</label>
-                    <select name="" id="Link_Ext_Simulation" class="form-control">
-                        <option value="">sim1</option>
-                        <option value="">sim2</option>
-                        <option value="">sim3</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-4">
-        <div class="card">
-            <div id = "HeaderSimulation" class="card-header">
-                Simulation
-            </div>
-            <div class="card-body">
-                <div class="form-inline">
-                    <label for="">Watch:</label>
-                    <select name="" id="Simulation_Watch" class="form-control">
-                        <option value="">watch1</option>
-                        <option value="">watch2</option>
-                        <option value="">watch3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="">DIS:</label>
-                    <select name="" id="Simulation_DIS" class="form-control">
-                        <option value="">DIC1</option>
-                        <option value="">DIC2</option>
-                        <option value="">DIC3</option>
-                    </select>
-                </div>
-                <div class="form-check-inline">
-                    <input type="checkbox" name="" id="ext_sim_cb" class="form-check-input">
-                    <label for="ext_sim_cb">Ext. simulation:</label>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-4">
-        <div class="card">
-            <div id = "HeaderConfigC" class="card-header">
-                C
-            </div>
-            <div class="card-body">
-                <div class="form-inline">
-                    <label for="">Backup Env:</label>
-                    <select name="" id="Backup_Env" class="form-control">
-                        <option value="">env1</option>
-                        <option value="">env2</option>
-                        <option value="">env3</option>
-                    </select>
-                </div>
-                <div class="form-check-inline">
-                    <input type="checkbox" name="" id="ext_env_sim_cb" class="form-check-input">
-                    <label for="ext_env_sim_cb">Ext. simulation:</label>
-                </div>
-            </div>
-        </div>
-  </div>
-  <div class="row seperator">
+<div class="row external_simulators_div">
+</div>
+<div class="row seperator">
     <i class="fas fa-circle"></i> <i class="fas fa-circle"></i> <i class="fas fa-circle"></i>
-  </div>
 </div>
 <div class="row sensors_div_line1">
-    <div class="col-3">
-        <div>
-            <div class="card">
-                <div id="HeaderSensors" class="card-header">
-                    Sensors
-                </div>
-                <div class="card-body">
-                    <div class="form-inline">
-                        <label for="" class="">1</label>
-                        <select name="Sensor" id="Sensors1" class="form-control">
-                            <option value="">sensor1</option>
-                            <option value="">sensor2</option>
-                            <option value="">sensor3</option>
-                        </select>
-                    </div>
-                    <div class="form-inline">
-                        <label for="" class="">2</label>
-                        <select name="Sensor" id="Sensors2" class="form-control">
-                            <option value="">sensor1</option>
-                            <option value="">sensor2</option>
-                            <option value="">sensor3</option>
-                        </select>
-                    </div>
-                    <div class="form-inline">
-                        <label for="" class="">3</label>
-                        <select name="Sensor" id="Sensors3" class="form-control">
-                            <option value="">sensor1</option>
-                            <option value="">sensor2</option>
-                            <option value="">sensor3</option>
-                        </select>
-                    </div>
-                    <div class="form-inline">
-                        <label for="" class="">4</label>
-                        <select name="Sensor" id="Sensors4" class="form-control">
-                            <option value="">sensor1</option>
-                            <option value="">sensor2</option>
-                            <option value="">sensor3</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="card nested-card">
-                <div id="HeaderGlasses" class="card-header">
-                    Glasses
-                </div>
-                <div class="card-body">
-                    <div class="form-inline">
-                        <label for="" class="">1</label>
-                        <select name="Glasses" id="Glasses1" class="form-control">
-                            <option value="">sensor1</option>
-                            <option value="">sensor2</option>
-                            <option value="">sensor3</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-3">
-        <div class="card">
-            <div id="HeaderSord" class="card-header">
-                Sord
-            </div>
-            <div class="card-body">
-                <div class="form-inline">
-                    <label for="" class="">1</label>
-                    <select name="Sord" id="Sord1" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">2</label>
-                    <select name="Sord" id="Sord2" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">3</label>
-                    <select name="Sord" id="Sord3" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">4</label>
-                    <select name="Sord" id="Sord4" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">5</label>
-                    <select name="Sord" id="Sord5" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">6</label>
-                    <select name="Sord" id="Sord6" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">7</label>
-                    <select name="Sord" id="Sord7" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">8</label>
-                    <select name="Sord" id="Sord8" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-3">
-        <div class="card">
-            <div id="HeaderWatch" class="card-header">
-                Watch
-            </div>
-            <div class="card-body">
-                <div class="form-inline">
-                    <label for="" class="">1</label>
-                    <select name="" id="look1" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">2</label>
-                    <select name="" id="look2" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">3</label>
-                    <select name="" id="look3" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">4</label>
-                    <select name="" id="look4" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-3">
-        <div class="card">
-            <div id="HeaderHear" class="card-header">
-                Hear
-            </div>
-            <div class="card-body">
-                <div class="form-inline">
-                    <label for="" class="">1</label>
-                    <select name="" id="Hear1" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">2</label>
-                    <select name="" id="Hear2" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">3</label>
-                    <select name="" id="Hear3" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">4</label>
-                    <select name="" id="Hear4" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">5</label>
-                    <select name="" id="Hear5" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">6</label>
-                    <select name="" id="Hear6" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">7</label>
-                    <select name="" id="Hear7" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">8</label>
-                    <select name="" id="Hear8" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">9</label>
-                    <select name="" id="Hear9" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-                <div class="form-inline">
-                    <label for="" class="">10</label>
-                    <select name="" id="Hear10" class="form-control">
-                        <option value="">sensor1</option>
-                        <option value="">sensor2</option>
-                        <option value="">sensor3</option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
 </div>
 
 <div class="row sensors_div_line2">
 
 
 </div>
-{% endblock %}
-{%block scripts%}
+{% endblock %} {%block scripts%}
 
-<script src="../static/js/default_skin.js"></script>
-<script src="../static/js/OctoUtils.js"></script>
-<script src="../static/js/define_complex_net.js"></script>
+<!-- <script src="../static/js/OctoUtils.js"></script> -->
+<!-- <script src="../static/js/default_skin.js"></script> -->
+<script src="../static/js/define_complex_net2.js"></script>
 
 {% endblock %}
