--- a/Source/templates/run_stage_definition.html
+++ b/Source/templates/run_stage_definition.html
@@ -89,9 +89,9 @@
         </div>
 
         <div class="col-5">
-            <label for="DP_file"><h5>DP File</h5></label>
+            <label for="dp_file"><h5>DP File</h5></label>
             <div class="form-inline">
-                <input list="dp_file_dl" type="text" name="" id="DP_file" class="form-control">
+                <input list="dp_file_dl" type="text" name="" id="dp_file" class="form-control">
                 <button hidden="hidden"></button>
             </div>
             <datalist id="dp_file_dl">
@@ -105,7 +105,7 @@
 
     <div class="row stage-def-inputs marginCard">
         <div class="col-5">
-            <label for="ovr_file"><h5>ovr File</h5></label>
+            <label id="run_time" for="ovr_file"><h5>ovr File</h5></label>
             <div class="form-inline">
                 <input list="ovr_file_dl" type="text" name="" id="ovr_file" class="form-control col-10">
                 <datalist id="ovr_file_dl">
