--- a/Source/templates/infras.html
+++ b/Source/templates/infras.html
@@ -48,9 +48,9 @@
         <div class="col-12 mb-auto site-data-wrapper">
 
             <div class="row site-data-div">
-                <div class="col-4 mb-auto first-column">
+                <div class="col-5 mb-auto first-column">
                     <div class="form-inline">
-                        <label for="Site_Conn"><h5>Site Connection</h5></label>
+                        <label for="Site_Conn"><h5><strong>Site Connection</strong></h5></label>
                         <!-- <input type="text" id="auto_data_IP" class="form-control medium-margin"> -->
                         <select id="Site_Conn" class="form-control medium-margin" type="text">
                             <option value="Tamnon1">Tamnon1</option>
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="form-inline">
-                        <label for="exercise_Conn"><h5>Excersice Connection</h5></label>
+                        <label for="exercise_Conn"><h5><strong>Excersice Connection</strong></h5></label>
                         <!-- <input type="text" id="auto_data_IP" class="form-control medium-margin"> -->
                         <select id="exercise_Conn" class="form-control medium-margin" type="text">
                             <option value="Tamnon1">Tamnon1</option>
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="form-inline">
-                        <label for="Octopus_Conn"><h5>Octopus Connection</h5></label>
+                        <label for="Octopus_Conn"><h5><strong>Octopus Connection</strong></h5></label>
                         <!-- <input type="text" id="auto_data_IP" class="form-control medium-margin"> -->
                         <select id="Octopus_Conn" class="form-control medium-margin" type="text">
                             <option value="Tamnon1">Tamnon1</option>
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="form-inline">
-                        <label class="right-align-container" for="version_input"><h5>Version</h5></label>
+                        <label class="right-align-container" for="version_input"><h5>Setup Ver</h5></label>
                         <input type="text" id="version_input" class="form-control medium-margin mr-auto">
                     </div>
                 </div>
