--- a/Source/templates/metadata_layout.html
+++ b/Source/templates/metadata_layout.html
@@ -77,7 +77,7 @@
             {% else %} {% if session['current_window_name']=='Define Complex Net' %}
             <div class="row margins-bottom-medium">
                 <div class="col-8">
-                    <label for="net_versions"><h5>Version</h5></label>
+                    <label for="net_versions"><h5>Setup Ver</h5></label>
                     <input list="net_versions_datalist" id="net_versions" type="text" class="form-control" id="meta_name">
                     <datalist id='net_versions_datalist'>
                 </datalist>
