--- a/Source/static/css/define_func.css
+++ b/Source/static/css/define_func.css
@@ -1,7 +1,6 @@
 .marginTopLeft {
-  margin-top: 20px;
-  margin-left: 15px;
-
+    margin-top: 20px;
+    margin-left: 15px;
 }
 
 .input-groups-data {
@@ -10,4 +9,8 @@
     padding-right: 20px;
     /* margin-left: -100px; */
     padding-left: 5px;
+}
+
+body {
+    margin-bottom: 50px;
 }
