--- a/Source/templates/metadata_layout.html
+++ b/Source/templates/metadata_layout.html
@@ -30,9 +30,8 @@
 
                 <div class="col-11">
                     <label for="meta_function_name"><h5>Function Name</h5></label>
-                    <input list="meta_name_datalist" type="text" class="form-control" id="meta_function_name">
+                    <input autocomplete="off" list="meta_name_datalist" type="text" class="form-control" id="meta_function_name">
                     <datalist id='meta_name_datalist'>
-                      <option value="global">kjsdhfskjdf</option>
                     </datalist>
                 </div>
 
