--- a/Source/static/css/define_func.css
+++ b/Source/static/css/define_func.css
@@ -6,9 +6,7 @@
 .input-groups-data {
     border-left: dotted lightgreen 2px;
     margin-top: 20px;
-    padding-right: 20px;
-    /* margin-left: -100px; */
-    padding-left: 5px;
+    padding-left: 30px;
 }
 
 body {
@@ -17,4 +15,34 @@ body {
 
 .form-control {
     width: 100%;
+}
+
+input[type=checkbox] {
+    /* Double-sized Checkboxes */
+    -ms-transform: scale(2);
+    /* IE */
+    -moz-transform: scale(2);
+    /* FF */
+    -webkit-transform: scale(2);
+    /* Safari and Chrome */
+    -o-transform: scale(2);
+    /* Opera */
+    transform: scale(2);
+    padding: 10px;
+}
+
+.flex_container {
+    display: flex;
+}
+
+.flex_container .col-6 {
+    padding-right: 0px;
+}
+
+.flex_container .col-3.mt-4 {
+    padding-right: 0px;
+}
+
+ul li div {
+    margin-top: 20px;
 }
