--- a/Source/templates/layout.html
+++ b/Source/templates/layout.html
@@ -18,9 +18,7 @@
     <script src="../static/js/bootstrap.bundle.min.js"></script>
     <script src="../static/js/charts.bundle.js"></script>
     <script type="text/javascript" src="../static/DataTables/datatables.min.js"></script>
-    {% block css %}
-    
-    {% endblock %}
+    {% block css %} {% endblock %}
 </head>
 
 <body>
@@ -106,6 +104,7 @@
     {%block scripts%} {% endblock %} {%block footer%} {% endblock %}
 
     <script src="../static/js/layout.js"></script>
+    <script src="../static/js/remove_autocomplete.js"></script>
 </body>
 
 </html>
