--- a/Source/static/css/layout_style.css
+++ b/Source/static/css/layout_style.css
@@ -35,6 +35,14 @@ button:focus {
     outline: 0;
 }
 
+.dropdown-menu {
+    left: auto;
+}
+
+.nav-link.dropdown-toggle {
+    margin-right: 30px;
+}
+
 
 /* #window-title-div{
   margin: auto;
