--- a/Source/templates/layout.html
+++ b/Source/templates/layout.html
@@ -82,7 +82,7 @@
                               </a>
                             <div class="dropdown-menu bg-dark border-light" aria-labelledby="DefineDropdownMenuLink">
                                 <a class="nav-link" href="user_wizard">Users</a>
-                                <a class="nav-link" href="Infras">Projects & Sites</a>
+                                <a class="nav-link" href="infras">Projects & Sites</a>
                             </div>
                         </li>
                     </ul>
